@@ -201,17 +201,13 @@ PRODID:-//Intermesh//NONSGML ".GO::config()->product_name." ".GO::config()->vers
 	
 	
 	
-	public function actionEmpty($params){
+	public function actionTruncate($params){
 		$calendar = GO_Calendar_Model_Calendar::model()->findByPk($params['calendar_id']);
 		
 		if(!$calendar)
 			throw new GO_Base_Exception_NotFound();
 		
-		$events = $calendar->events;
-		
-		foreach($events as $event){
-			$event->delete();
-		}
+		$calendar->truncate();
 		
 		$response['success']=true;
 		
